manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82265640"
  namespace: "82265640"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82265640"
  template:
    metadata:
      labels:
        app: "82265640"
    spec:
      containers:
        - name: "82265640"
          image: cepgstapacr.azurecr.io/82265640
          ports:
          - containerPort: 8080
